syntax = "proto3";

package datacore.adapter;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "DataCore.Adapter.Grpc";


service EventsService {
    rpc CreateEventPushChannel(CreateEventPushChannelRequest) returns (stream EventMessagePush);
}


message CreateEventPushChannelRequest {
    string adapter_id = 1;
    bool active = 2;
}


message EventMessagePush {
    EventMessage event_message = 1;
}


message EventMessage {
    string id = 1;
    google.protobuf.Timestamp utc_event_time = 2;
    EventPriority priority = 3;
    string category = 4;
    string message = 5;
    map<string, string> properties = 6;
}


enum EventPriority {
    EVENT_PRIORITY_UNKNOWN = 0;
    EVENT_PRIORITY_LOW = 1;
    EVENT_PRIORITY_MEDIUM = 2;
    EVENT_PRIORITY_HIGH = 3;
    EVENT_PRIORITY_CRITICAL = 4;
}